[package]
name = "test-read-process-memory"
version = "0.1.0"
authors = ["Adrian Kurylak <adrian.kurylak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
libc = "0.2.97"
benfred-read-process-memory = {version = "0.2.1", path = "./read-process-memory/"}
